fix issue with unexpected 'lambda' class name info appearing in log output